# EmbCom

./: .gitmodules  .travis.yml  CMakeLists.txt
ext/: CMakeLists.txt
include/EmbCom/: Appendage.hpp  Command.hpp  CommandBuilder.hpp  Data.hpp  Device.hpp  Exceptions.hpp  SerialBuffer.hpp
src/: Appendage.cpp  Command.cpp  CommandBuilder.cpp  Data.cpp  Device.cpp  Main.cpp
test/: Data.cpp
travis/: after_script.sh  before_script.sh  script.sh
